--- a/practice-01/styles/font.css
+++ b/practice-01/styles/font.css
@@ -1,22 +1,34 @@
-    
-    .font--nav{
+    .font--nav {
         font-weight: var(--font-weight-medium);
-        font-size: var(--font-size-small) ;
+        font-size: var(--font-size-small);
         line-height: var(--line-height-small);
     }
-    .font--tab{
+
+    .font--nav__menu {
+        font-weight: var(--font-weight-medium);
+        font-size: var(--font-size-small);
+        line-height: var(--line-height-small);
+    }
+
+    .font--tab {
         font-weight: var(--font-size-medium);
         font-size: var(--font-size-medium);
         line-height: var(--line-height-medium);
     }
-    .button--font {
+
+    .font--button {
         font-weight: var(--font-weight-bold);
         font-size: var(--font-size-medium);
         line-height: var(--line-height-small);
     }
+
     .font--x-larger {
         font-weight: var(--font-weight-bold);
         font-size: var(--font-size-xx-large);
         line-height: var(--line-height-xxx-large);
     }
-
+    .title-tab {
+        font-weight: var(--font-weight-bold);
+        font-size: var(--font-size-small);
+        line-height: var(--line-height-small);
+    }
