update BEM name

--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -12,10 +12,12 @@ body {
 a {
     text-decoration: none;
 }
+
 .container {
     width: 80%;
     margin: auto;
 }
+
 .btn {
     display: inline-block;
     background-color: var(--white);
@@ -27,7 +29,10 @@ a {
     padding-top: 6px;
     padding-bottom: 6px;
 
-    cursor: pointer;
+
+    font-weight: var(--font-weight-bold);
+    font-size: var(--font-size-medium);
+    line-height: var(--line-height-small);
 
 }
 
@@ -52,17 +57,20 @@ a {
 
     padding: 29px 0;
 }
+
 .header__content .navbar--container {
     width: 80%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .navbar--container .menu__list {
     display: flex;
     width: 70%;
 }
-.menu__list .item--link {
+
+.menu__list .menu__item {
     font-family: var(--font-family);
     color: var(--black);
     margin-left: 40px;
@@ -72,7 +80,8 @@ a {
 .header__content .nav__option {
     display: flex;
 }
-.nav__option .nav__button:last-child {
+
+.nav__option .button--tryfree {
     background-color: var(--crab-nebula);
     color: white;
     margin-left: 16px;
@@ -83,10 +92,12 @@ a {
     padding-top: 70px;
 
 }
+
 .header__carousel .carousel__content--above {
     letter-spacing: -0.888889px;
     color: var(--black);
 }
+
 .header__carousel .carousel__content--below {
     color: var(--westchester-grey);
 }
@@ -99,17 +110,19 @@ a {
 
 .header__tab .tab__list {
     display: flex;
+    width: 40%;
+    justify-content: space-between;
 }
-.tab__list .list--item {
-    margin-right: 40px;
-}
-.tab__list .list--item:nth-child(1) {
+
+
+.tab__list .list--mark {
     border-bottom: 3px solid var(--alienated);
     padding-bottom: 27px;
 }
-.tab__list .list--item:nth-child(1)>.item--link {
+.tab__list .list--mark .list__item{
     color: black;
 }
-.list--item .item--link {
+
+.tab__list .list__item {
     color: var(--lucky-grey);
 }
