--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -70,7 +70,7 @@ a {
     width: 70%;
 }
 
-.menu__list .menu__item {
+.menu__list .item {
     font-family: var(--font-family);
     color: var(--black);
     margin-left: 40px;
@@ -81,7 +81,7 @@ a {
     display: flex;
 }
 
-.nav__option .button--tryfree {
+.nav__option .button:nth-child(2) {
     background-color: var(--crab-nebula);
     color: white;
     margin-left: 16px;
