--- a/practice-01/styles/algin.css
+++ b/practice-01/styles/algin.css
@@ -26,3 +26,28 @@
     padding-bottom: 21px;
     
 }
+/*prodcut_*/
+.product .container {
+    margin-top: 120px;
+}
+.product__item{
+    width: 30%;
+    
+    margin-bottom: 120px;
+}
+.product__item h5 {
+    padding-bottom: 14px;
+    margin-bottom: 24px;
+    border-bottom: 1px solid var(--westchester-grey);
+}
+.product__item .pic{
+    height:241px ;
+    margin-bottom: 16px;
+    /* padding: -30px; background padding */
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.product__item h3{
+    padding-bottom: 24px;
+} 
