--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -130,3 +130,45 @@ a {
     background: url(../img/service__img.png);
     background-repeat: no-repeat;
 }
+
+
+
+
+
+
+/* product */
+.product__content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.product__content .product__item .pic {
+    width: 100%;
+    height: 242px;
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.product__item .product--bg1{
+    background: url(../img/product__item1.png);
+
+}
+.product__item .product--bg2{
+    background: url(../img/product__item2.png);
+
+}
+.product__item .product--bg3{
+    background: url(../img/product__item3.png);
+
+}.product__item .product--bg4{
+    background: url(../img/product__item4.png);
+
+}.product__item .product--bg5{
+    background: url(../img/product__item5.png);
+
+}
+.product__item .product--bg6{
+    background: url(../img/product__item6.png);
+
+}
