--- a/practice-01/styles/algin.css
+++ b/practice-01/styles/algin.css
@@ -30,17 +30,24 @@
 .product .container {
     margin-top: 120px;
 }
-.product__item{
+.product__content .card-body{
     width: 30%;
-    
     margin-bottom: 120px;
 }
-.product__item h5 {
+.product__content .card-body .card-pic {
+    width: 100%;
+    height: 242px;
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.card-body .card-title {
     padding-bottom: 14px;
     margin-bottom: 24px;
     border-bottom: 1px solid var(--westchester-grey);
 }
-.product__item .pic{
+.card-body .card-pic{
     height:241px ;
     margin-bottom: 16px;
     /* padding: -30px; background padding */
@@ -48,6 +55,12 @@
     background-size: cover;
     background-position: center;
 }
-.product__item h3{
+.card-body .card-text{
     padding-bottom: 24px;
 } 
+
+/* marketing */
+
+.marketing .container {
+    margin-top: 118px;
+}
