--- a/practice-01/styles/algin.css
+++ b/practice-01/styles/algin.css
@@ -11,6 +11,7 @@
 .navbar .menu__list .item {
     margin-left: 40px;
 }
+
 .header__carousel {
     padding-top: 70px;
 }
@@ -24,43 +25,47 @@
     margin-right: 30px;
     padding-top: 24px;
     padding-bottom: 21px;
-    
+
 }
+
 /*prodcut_*/
 .product .container {
     margin-top: 120px;
 }
-.product__content .card-body{
+
+.card .card-body {
     width: 30%;
     margin-bottom: 120px;
 }
-.product__content .card-body .card-pic {
-    width: 100%;
-    height: 242px;
 
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
 .card-body .card-title {
     padding-bottom: 14px;
     margin-bottom: 24px;
     border-bottom: 1px solid var(--westchester-grey);
 }
-.card-body .card-pic{
-    height:241px ;
+
+.card-body .card-pic {
     margin-bottom: 16px;
     /* padding: -30px; background padding */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
-.card-body .card-text{
+
+.card-body .card-text {
     padding-bottom: 24px;
-} 
+}
 
 /* marketing */
 
 .marketing .container {
     margin-top: 118px;
+}
+
+
+
+
+/* article */
+.Blog_Article .container{
+    margin-top: 120px;
 }
