--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -4,6 +4,9 @@
 @import url(../styles/algin.css);
 
 /* Global */
+* {
+    box-sizing: border-box;
+}
 html,
 body {
     font-family: var(--font-family);
@@ -28,7 +31,13 @@ a {
 
 }
 
+.card-body .card-pic{
+    width: 100%;
 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
 
 
@@ -65,18 +74,20 @@ a {
 .header__content .nav__option {
     display: flex;
 }
+
 .nav__option .button--crab-nebula {
     background-color: var(--crab-nebula);
     color: white;
     margin-left: 16px;
 }
+
 .header__carousel {
     padding-top: 70px;
 }
 
 
 .header__tab {
-    padding-top: 100px;
+    margin-top: 100px;
     width: 100%;
     height: 54px;
 }
@@ -92,7 +103,8 @@ a {
     border-bottom: 3px solid var(--alienated);
     padding-bottom: 27px;
 }
-.tab__list .list--mark .list__item{
+
+.tab__list .list--mark .list__item {
     color: black;
 }
 
@@ -108,12 +120,14 @@ a {
     width: 100%;
     background: var(--white);
 }
+
 .service .container {
     display: flex;
 }
+
 .service__left {
     width: 47%;
-   
+
     border-bottom: 1px solid var(--westchester-grey);
     border-top: 1px solid var(--westchester-grey);
 }
@@ -142,32 +156,38 @@ a {
     flex-wrap: wrap;
     justify-content: space-between;
 }
-.product__content .card-body .card-pic {
-    width: 100%;
-    height: 242px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+
+.product__content .card-body .card-pic {  
+        width: 100%;
+        height: 242px;
 }
- .product--bg1{
+
+.product--bg1 {
     background: url(../img/product__item1.png);
 
 }
- .product--bg2{
+
+.product--bg2 {
     background: url(../img/product__item2.png);
 
 }
- .product--bg3{
+
+.product--bg3 {
     background: url(../img/product__item3.png);
 
-} .product--bg4{
+}
+
+.product--bg4 {
     background: url(../img/product__item4.png);
 
-} .product--bg5{
+}
+
+.product--bg5 {
     background: url(../img/product__item5.png);
 
 }
- .product--bg6{
+
+.product--bg6 {
     background: url(../img/product__item6.png);
 
 }
@@ -176,3 +196,68 @@ a {
 
 
 
+/* marketing */
+.marketing__content {
+    display: flex;
+}
+
+.marketing__left , .marketing__right {
+    width: 50%;
+}
+.card--medium .card-bordy{
+    width: 100%;
+}
+.marketing__content .card-pic{
+    background: url(../img/marketing__img.png);
+    height:370px;
+    background-repeat: no-repeat;
+}
+.marketing__right{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+.marketing__right .card-body {
+    padding-top: 16px;
+    border-top: 1px solid var(--westchester-grey);
+    margin-top: 33px;
+}
+.marketing__right .card-body .card-text {
+    margin-bottom: 32px;
+}
+
+.card-body .item-footer {
+    display: flex;
+}
+
+
+
+
+/* article */
+.article__container {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+.article__container .card-body{
+    width: 30%;
+}
+.article__container .card-pic{
+    width: 100%;
+    height: 241px;
+}
+.article__container .art--bg1{
+    background: url(../img/article__img1.png);
+    background-repeat: no-repeat;
+
+}.article__container .art--bg2{
+    background: url(../img/article__img2.png);
+    background-repeat: no-repeat;
+
+}.article__container .art--bg3{
+    background: url(../img/article__img3.png);
+    background-repeat: no-repeat;
+
+}
