--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -261,3 +261,37 @@ a {
     background-repeat: no-repeat;
 
 }
+
+
+
+
+
+/*cta__blog  */
+.cta {
+    height: 468px;
+    background: url(../img/BG.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.cta__blog{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.cta__content{
+    width: 60%;
+}
+.cta__content .text {
+    padding-top: 24px;
+    opacity: 72%;
+}
+.cta__button .button {
+    border-radius: 8px;
+    width: 198px;
+    height: 64px;
+    background: var(--white);
+
+    filter: drop-shadow(0px 24px 32px rgba(0, 0, 0, 0.1));
+
+}
