--- a/practice-01/styles/font.css
+++ b/practice-01/styles/font.css
@@ -18,6 +18,33 @@
     }
 
 
+
+    /* Card */
+    .card--none-pic .card-text{
+        font-size: var(--font-size-x-large);
+        font-weight: var(--font-weight-bold);
+        line-height: var(--line-height-xx-large);
+    }
+    .card-title{
+        color: var(--westchester-grey);
+        font-weight: var(--font-weight-bold);
+        font-size: var(--font-size-small);
+        line-height: var(--line-height-small);
+    }
+    .card-text{
+        font-weight: var(--font-weight-bold);
+        font-size:var(--font-size-large);
+        line-height: var(--line-height-large);
+        letter-spacing: -0.33px;
+    }
+    .card-footer{
+        font-weight: var(--font-weight-medium);
+        font-size: var(--font-size-datetime);
+        line-height: var(--line-height-x-small);
+    }
+    .card-footer-gray {
+        color: var(--westchester-grey);
+    }
     /* .h6-b3-text {
         font-size: var(--font-size-small);
         font-weight: var(--font-weight-bold);
