--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -153,7 +153,7 @@ a {
     padding-bottom: 21px;
 
 }
-.service__left .card__text {
+.service__left .card__text--lg {
     padding-bottom: 120px;
 
 }
