--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -35,20 +35,19 @@ a {
     line-height: var(--line-height-small);
 
 }
-.card--img .card__pic{
+.card--img__body .card__pic{
     width: 100%;
-    margin-bottom: 16px;
     /* padding: -30px; background padding */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
-.card__body .card__title {
+.card--img__body .card__title {
     padding-bottom: 14px;
     margin-bottom: 24px;
     border-bottom: 1px solid var(--westchester-grey);
 }
-.card__body .card__text {
+.card--img__body .card__text {
     padding-bottom: 24px;
 }
 
@@ -171,7 +170,6 @@ a {
 
 .service__left .card__text--lg {
     padding-bottom: 120px;
-
 }
 
 .service__right {
@@ -194,40 +192,42 @@ a {
     flex-wrap: wrap;
     justify-content: space-between;
 }
-.product__content .card__body {
+.product__content .card--img__body {
     width: 30%;
     margin-bottom: 120px;
 }
 .product__content .card__pic {
     height: 242px;
+    margin-bottom: 16px;
+
 }
 
-.product--bg1 {
+.product__img1 {
     background: url(../img/product__item1.png);
 
 }
 
-.product--bg2 {
+.product__img2 {
     background: url(../img/product__item2.png);
 
 }
 
-.product--bg3 {
+.product__img3 {
     background: url(../img/product__item3.png);
 
 }
 
-.product--bg4 {
+.product__img4 {
     background: url(../img/product__item4.png);
 
 }
 
-.product--bg5 {
+.product__img5 {
     background: url(../img/product__item5.png);
 
 }
 
-.product--bg6 {
+.product__img6 {
     background: url(../img/product__item6.png);
 
 }
