--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -35,19 +35,19 @@ a {
     line-height: var(--line-height-small);
 
 }
-.card__img__body .card__pic{
+.card__img .card__img--bg {
     width: 100%;
     /* padding: -30px; background padding */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
-.card__img__body .card__title {
+.card__img-body .card__title {
     padding-bottom: 14px;
     margin-bottom: 24px;
     border-bottom: 1px solid var(--westchester-grey);
 }
-.card__img__body .card__text {
+.card__img-body .card__text {
     padding-bottom: 24px;
 }
 
@@ -192,42 +192,42 @@ a {
     flex-wrap: wrap;
     justify-content: space-between;
 }
-.product__content .card__img__body {
+.product__content .card__img-body {
     width: 30%;
     margin-bottom: 120px;
 }
-.product__content .card__pic {
+.product__content .card__img--bg {
     height: 242px;
     margin-bottom: 16px;
 
 }
 
-.card__pic--product1 {
+.bg-product1 {
     background: url(../img/product__item1.png);
 
 }
 
-.card__pic--product2 {
+.bg-product2 {
     background: url(../img/product__item2.png);
 
 }
 
-.card__pic--product3 {
+.bg-product3 {
     background: url(../img/product__item3.png);
 
 }
 
-.card__pic--product4 {
+.bg-product4 {
     background: url(../img/product__item4.png);
 
 }
 
-.card__pic--product5 {
+.bg-product5 {
     background: url(../img/product__item5.png);
 
 }
 
-.card__pic--product6 {
+.bg-product6 {
     background: url(../img/product__item6.png);
 
 }
