--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -35,6 +35,7 @@ a {
     line-height: var(--line-height-small);
 
 }
+
 .card__img .card__img--bg {
     width: 100%;
     /* padding: -30px; background padding */
@@ -42,11 +43,13 @@ a {
     background-position: center;
     background-repeat: no-repeat;
 }
+
 .card__img-body .card__title {
     padding-bottom: 14px;
     margin-bottom: 24px;
     border-bottom: 1px solid var(--westchester-grey);
 }
+
 .card__img-body .card__text {
     padding-bottom: 24px;
 }
@@ -187,47 +190,23 @@ a {
 .product .container {
     margin-top: 120px;
 }
+
 .product__content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
 .product__content .card__img-body {
     width: 30%;
     margin-bottom: 120px;
 }
+
 .product__content .card__img--bg {
     height: 242px;
     margin-bottom: 16px;
 
 }
-
-.bg-product1 {
-    background: url(../img/product__item1.png);
-
-}
-
-.bg-product2 {
-    background: url(../img/product__item2.png);
-
-}
-
-.bg-product3 {
-    background: url(../img/product__item3.png);
-
-}
-
-.bg-product4 {
-    background: url(../img/product__item4.png);
-
-}
-
-.bg-product5 {
-    background: url(../img/product__item5.png);
-
-}
-
-.bg-product6 {
-    background: url(../img/product__item6.png);
-
+.bg-product {
+    width: 100%;
 }
