--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -210,3 +210,58 @@ a {
 .product__pic {
     width: 100%;
 }
+
+
+
+
+
+/* marketing */
+.marketing__content {
+    display: flex;
+}
+
+.marketing__left,
+.marketing__right {
+    width: 50%;
+}
+
+
+.marketing__pic {
+    width: 100% ;
+    height: 370px;
+    margin-bottom: 24px;
+}
+
+.marketing__right {
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin-left: 31px;
+}
+
+.marketing__right .card__body {
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+    padding-top: 16px;
+    border-top: 1px solid var(--westchester-grey);
+    margin-top: 33px;
+}
+
+.card__body .card__text {
+    margin-bottom: 32px;
+}
+
+.card-block .card__title {
+    text-align: right;
+}
+
+.card-block:nth-child(1) {
+    width: 70%;
+}
+.card-block:nth-child(2) {
+    width: 30%;
+}
