--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -325,7 +325,10 @@ a {
 .cta__passage .cta__text {
     padding-top: 24px;
     opacity: 72%;
-    color:var(--white);
+}
+.cta__title {
+    letter-spacing: -0,89px;
+    color: var(--white);
 }
 
 
@@ -340,7 +343,7 @@ a {
 
     filter: drop-shadow(0px 24px 32px rgba(0, 0, 0, 0.1));
 }
-.cta__button .cta__text {
+.cta__text {
     color: var(--white);
     margin-top: 24px;
 }
