--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -5,449 +5,407 @@
 /* Global */
 html,
 body {
-    font-family: var(--font-family);
-    font-style: normal;
+  font-family: var(--font-family);
+  font-style: normal;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .container {
-    max-width: 1440px;
-    /* change : width: 8 */
-    margin: auto;
+  max-width: 1440px;
+  /* change : width: 8 */
+  margin: auto;
 }
 
 .btn {
-    display: inline-block;
-    background-color: var(--white);
-    border: 1px solid var(--gainsboro);
-    border-radius: 4px;
+  display: inline-block;
+  background-color: var(--white);
+  border: 1px solid var(--gainsboro);
+  border-radius: 4px;
 
-    padding-left: 12px;
-    padding-right: 12px;
-    padding-top: 6px;
-    padding-bottom: 6px;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-top: 6px;
+  padding-bottom: 6px;
 
-
-    font-weight: var(--font-weight-bold);
-    font-size: var(--font-size-medium);
-    line-height: var(--line-height-small);
-
+  font-weight: var(--font-weight-bold);
+  font-size: var(--font-size-medium);
+  line-height: var(--line-height-small);
 }
 
 .card__img .card__img-pic {
-    width: 100%;
-    /* padding: -30px; background padding */
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  width: 100%;
+  /* padding: -30px; background padding */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
-    padding-bottom: 16px;
+  padding-bottom: 16px;
 }
 
 .card__img-body .card__title {
-    padding-bottom: 14px;
-    margin-bottom: 24px;
-    border-bottom: 1px solid var(--westchester-grey);
+  padding-bottom: 14px;
+  margin-bottom: 24px;
+  border-bottom: 1px solid var(--westchester-grey);
 }
 
 .card__img-body .card__text {
-    padding-bottom: 24px;
+  padding-bottom: 24px;
 }
-
 
 /* header */
 .header {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: var(--lighthouse);
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--lighthouse);
 }
 
-
 .header__content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    padding: 29px 0;
+  padding: 29px 0;
 }
 
 .header__content .navbar {
-    width: 80%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar .menu__list {
-    display: flex;
-    width: 70%;
+  display: flex;
+  width: 70%;
 }
 
 .menu__list .item {
-    font-family: var(--font-family);
-    color: var(--black);
-    margin-left: 40px;
+  font-family: var(--font-family);
+  color: var(--black);
+  margin-left: 40px;
 }
 
-
 .nav__button .btn--secondary {
-    background-color: var(--crab-nebula);
-    color: white;
-    margin-left: 16px;
+  background-color: var(--crab-nebula);
+  color: white;
+  margin-left: 16px;
 }
 
 .header__carousel {
-    padding-top: 70px;
-
+  padding-top: 70px;
 }
 
 .header__carousel .carousel__content--above {
-    letter-spacing: -0.888889px;
-    color: var(--black);
+  letter-spacing: -0.888889px;
+  color: var(--black);
 }
 
 .header__carousel .carousel__content--below {
-    color: var(--westchester-grey);
+  color: var(--westchester-grey);
 }
 
 .header__tab {
-    padding-top: 100px;
-    width: 100%;
-    height: 54px;
+  padding-top: 100px;
+  width: 100%;
+  height: 54px;
 }
 
 .header__tab .tab__list {
-    display: flex;
-    width: 40%;
-    justify-content: space-between;
+  display: flex;
+  width: 40%;
+  justify-content: space-between;
 }
 
-
 .tab__list .list--mark {
-    border-bottom: 3px solid var(--alienated);
-    padding-bottom: 27px;
+  border-bottom: 3px solid var(--alienated);
+  padding-bottom: 27px;
 }
 
 .tab__list .list--mark .list__item {
-    color: black;
+  color: black;
 }
 
 .tab__list .list__item {
-    color: var(--lucky-grey);
+  color: var(--lucky-grey);
 }
-
-
-
 
 /* service */
 .service {
-
-    background: var(--white);
+  background: var(--white);
 }
 
 .service .container {
-    margin-top: 120px;
-    display: flex;
-    justify-content: space-between;
-
+  margin-top: 120px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .service__left {
-    width: 47%;
+  width: 47%;
 
-    border-bottom: 1px solid var(--westchester-grey);
-    border-top: 1px solid var(--westchester-grey);
+  border-bottom: 1px solid var(--westchester-grey);
+  border-top: 1px solid var(--westchester-grey);
 
-    margin-right: 30px;
-    padding-top: 24px;
-    padding-bottom: 21px;
-
+  margin-right: 30px;
+  padding-top: 24px;
+  padding-bottom: 21px;
 }
 
 .service__left .card__text--lg {
-    padding-bottom: 120px;
+  padding-bottom: 120px;
 }
 
 .service__right {
-    width: 50%;
-    height: 370px;
+  width: 50%;
+  height: 370px;
 
-    background: url(../img/service__img.png);
-    background-repeat: no-repeat;
+  background: url(../img/service__img.png);
+  background-repeat: no-repeat;
 }
-
-
-
 
 /* product */
 .product .container {
-    margin-top: 120px;
+  margin-top: 120px;
 }
 
 .product__content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .product__content .card__img-body {
-    width: 30%;
-    margin-bottom: 120px;
+  width: 30%;
+  margin-bottom: 120px;
 }
 
 .product__content .card__img--bg {
-    height: 242px;
-    margin-bottom: 16px;
-
+  height: 242px;
+  margin-bottom: 16px;
 }
 .product__pic {
-    width: 100%;
+  width: 100%;
 }
-
-
-
-
 
 /* marketing */
 .marketing__content {
-    display: flex;
+  display: flex;
 }
 
 .marketing__left,
 .marketing__right {
-    width: 50%;
+  width: 50%;
 }
 
-
 .marketing__pic {
-    width: 100% ;
-    height: 370px;
-    padding-bottom: 24px;
+  width: 100%;
+  height: 370px;
+  padding-bottom: 24px;
 }
 
 .marketing__right {
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    align-items: center;
-    margin-left: 31px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  align-items: center;
+  margin-left: 31px;
 }
 
 .marketing__right .card__body {
-    width: 100%;
-    display: flex;
-    align-items: flex-end;
-    padding-top: 16px;
-    border-top: 1px solid var(--westchester-grey);
-    margin-top: 33px;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  padding-top: 16px;
+  border-top: 1px solid var(--westchester-grey);
+  margin-top: 33px;
 }
 
 .card--horizontal-block .card__text {
-    margin-bottom: 32px;
+  margin-bottom: 32px;
 }
 
 .card--horizontal-block .card__title {
-    text-align: right;
+  text-align: right;
 }
 
 .card--horizontal-block:nth-child(1) {
-    width: 70%;
+  width: 70%;
 }
 .card--horizontal-block:nth-child(2) {
-    width: 30%;
+  width: 30%;
 }
-
-
-
-
 
 /* article */
 .Blog_Article .container {
-    padding-top: 158px;
-
+  padding-top: 158px;
 }
 
 .article__content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .article__content .card__img-body {
-    width: 30%;
+  width: 30%;
 }
 
 .article__content .article__pic {
-    width: 100%;
-    height: 241px;
+  width: 100%;
+  height: 241px;
 }
-
-
-
-
 
 /* CTA-section */
 .cta {
-    height: 468px;
-    background: url(../img/BG.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  height: 468px;
+  background: url(../img/BG.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    margin-top: 180px;
+  margin-top: 180px;
 }
 .cta .container {
-    padding-top: 120px;
-
+  padding-top: 120px;
 }
 .cta__content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-items: center;
 }
-
 
 .cta__passage {
-    width: 60%;
+  width: 60%;
 }
 .cta__passage .cta__text {
-    padding-top: 24px;
-    opacity: 72%;
+  padding-top: 24px;
+  opacity: 72%;
 }
 .cta__title {
-    letter-spacing: -0,89px;
-    color: var(--white);
+  letter-spacing: -0, 89px;
+  color: var(--white);
 }
-
 
 .cta__button {
-    text-align: center;
+  text-align: center;
 }
 .cta__button .btn__icon {
-    padding-left: 32px;
-    width: 8px;
-    height: 12px;
+  padding-left: 32px;
+  width: 8px;
+  height: 12px;
 }
-.btn--chevron{
-    border-radius: none;
-    width: 198px;
-    height: 64px;
-    background: var(--white);
+.btn--chevron {
+  border-radius: none;
+  width: 198px;
+  height: 64px;
+  background: var(--white);
 
-    filter: drop-shadow(0px 24px 32px rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(0px 24px 32px rgba(0, 0, 0, 0.1));
 }
 .cta__text {
-    color: var(--white);
-    margin-top: 24px;
+  color: var(--white);
+  margin-top: 24px;
 }
-
-
-
 
 /* footer */
 .footer {
-    background: var(--white);
-    position: relative;
-
+  background: var(--white);
+  position: relative;
 }
 .footer__content {
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    margin-top: 122px;
-    margin-bottom: 134px;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  margin-top: 122px;
+  margin-bottom: 134px;
 }
 
 .content__left {
-    width: 30%;
+  width: 30%;
 }
 
-.footer__text {
-    margin-top: 24px;
+.footer__text .font--small {
+  margin-top: 24px;
+  color: var(--bauhaus);
+  line-height: var(--line-height-medium);
 }
 
 .media__list {
-    display: flex;
-
+  display: flex;
 }
 .media__icon {
-    margin-right: 16px;
-    padding-top: 25px;
-
+  margin-right: 16px;
+  padding-top: 25px;
 }
 
-
 .footer__content .content__right {
-    width: 70%;
-    display: flex;
-    justify-content: space-between;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .footer__list .list__item {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .footer__list .list__item .item {
-    /* display: flex; */
-    padding-bottom: 20px;
+  /* display: flex; */
+  padding-bottom: 20px;
 }
 .item--mark {
-    font-weight: var(--font-weight-bold);
+  font-weight: var(--font-weight-bold);
 }
 
 /* <hr> line */
 .footer__line {
-    width: 94%;
-    height: 1px;
-    background: var(--lucky-grey);
-    mix-blend-mode: normal;
-    opacity: 0.24;
+  width: 94%;
+  height: 1px;
+  background: var(--lucky-grey);
+  mix-blend-mode: normal;
+  opacity: 0.24;
 }
 
-
 .footer__rule {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: nowrap;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: nowrap;
 
-    padding: 40px 0px;
+  padding: 40px 0px;
 }
 
 .link-mail {
-    color: var(--bauhaus);
-    letter-spacing: 0.2px;
+  color: var(--bauhaus);
+  letter-spacing: 0.2px;
 }
 
-.footer__rule-block{
-    width: 70%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.footer__rule-block {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .rules__list {
-    display: flex;
-   
-    justify-content: space-around;
-    
+  display: flex;
+
+  justify-content: space-around;
 }
-.rules__list .item{
-    padding-right: 48px;
+.rules__list .item {
+  padding-right: 48px;
 }
 .btn--group {
-    display: flex;
-    align-items: center;
-    border: none;
-    padding-right: 55px;
+  display: flex;
+  align-items: center;
+  border: none;
+  padding-right: 55px;
 }
-.btn--group .btn__icon {
-    padding: 5px;
+.btn--group .btn__text {
+  padding: 0 4px 0 10px;
 }
