--- a/practice-01/styles/variable.css
+++ b/practice-01/styles/variable.css
@@ -1,39 +1,40 @@
-@import url('https://fonts.cdnfonts.com/css/satoshi');
+@import url("https://fonts.cdnfonts.com/css/satoshi");
 
 :root {
-    /* --------------font-------------------- */
-    --font-family: 'Satoshi', sans-serif;
+  /* --------------font-------------------- */
+  --font-family: "Satoshi", sans-serif;
 
-    /* -------------color-------------------- */
-    --white: #ffffff;
-    --black: #000000;
-    --lighthouse: #f4f4f4;
-    --gainsboro: #dcdcdc;
-    --westchester-grey: #787878;
-    --lucky-grey: #777777;
-    --crab-nebula: #004050;
-    --alienated: #00CC61;
+  /* -------------color-------------------- */
+  /* https://colornamer.robertcooper.me/  */
+  --white: #ffffff;
+  --black: #000000;
+  --lighthouse: #f4f4f4;
+  --gainsboro: #dcdcdc;
+  --westchester-grey: #787878;
+  --lucky-grey: #777777;
+  --bauhaus: #404040;
+  --crab-nebula: #004050;
+  --alienated: #00cc61;
 
+  /* -------------font-weight-------------- */
 
-    /* -------------font-weight-------------- */
+  --font-weight-small: 400; /*b1*/
+  --font-weight-medium: 500; /*b2*/
+  --font-weight-bold: 700; /*b3*/
 
-    --font-weight-small: 400;  /*b1*/
-    --font-weight-medium: 500; /*b2*/
-    --font-weight-bold: 700; /*b3*/
+  /* -------------font-size---------------- */
+  --font-size-small: 14px; /*h6*/
+  --font-size-datetime: 16px; /*h5*/
+  --font-size-medium: 18px; /*h4*/
+  --font-size-large: 24px; /*h3*/
+  --font-size-x-large: 32px; /*h2*/
+  --font-size-xx-large: 64px; /*h1*/
 
-    /* -------------font-size---------------- */
-    --font-size-small: 14px; /*h6*/
-    --font-size-datetime: 16px; /*h5*/
-    --font-size-medium: 18px; /*h4*/
-    --font-size-large: 24px; /*h3*/
-    --font-size-x-large: 32px; /*h2*/
-    --font-size-xx-large: 64px; /*h1*/
-
-    /* -------------line-height-------------- */
-    --line-height-small: 19px; 
-    --line-height-medium: 24px;
-    --line-height-large: 34px;
-    --line-height-x-large: 42px;
-    --line-height-xx-large: 50px;
-    --line-height-xxx-large: 74px;
+  /* -------------line-height-------------- */
+  --line-height-small: 19px;
+  --line-height-medium: 24px;
+  --line-height-large: 34px;
+  --line-height-x-large: 42px;
+  --line-height-xx-large: 50px;
+  --line-height-xxx-large: 74px;
 }
